--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "author": "Hiro Kai <fullerenec84@gmail.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build && tsc && cp -r server/model/map_templates dist_server/server/model && cp firebaseConfig.js dist_server/",
+    "build": "yarn dev:api && vue-cli-service build && tsc && cp -r server/model/map_templates dist_server/server/model && cp firebaseConfig.js dist_server/ && cp server/virtual-poster.v1.yaml dist_server/server/",
     "lint": "vue-cli-service lint --no-fix",
-    "db": "psql postgres -d virtual_poster",
+    "db": "psql $(./node_modules/yaml-cli/libexec/yaml get virtual_poster.yaml postgresql)",
     "dev": "set NODE_ENV=development && nodemon -L >&2 | npm run serve",
-    "dev:api": "rm -r api && openapi2aspida -i server/virtual-poster.v1.yaml",
+    "dev:api": "(rm -r api || true) && openapi2aspida -i server/virtual-poster.v1.yaml",
     "init_data": "ts-node -O '{\"module\": \"commonjs\"}' server/initialize_data.ts",
     "lint:fix": "vue-cli-service lint",
-    "nohup": "sudo NODE_ENV=production nohup node dist_server/server/index.js &",
-    "prod": "NODE_ENV=production ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
+    "nohup": "NODE_ENV=production forever start dist_server/server/socket_index.js >> nohup.socket.txt && forever start dist_server/server/index.js >> nohup.rest.txt",
     "prod:log": "NODE_ENV=production DEBUG_LOG=1 ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
     "server": "nodemon --exec ts-node -r tsconfig-paths/register -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
     "socket": "nodemon --exec ts-node -r tsconfig-paths/register -O '{\"module\": \"commonjs\"}' server/socket_index.ts | bunyan -o short",
@@ -24,11 +23,13 @@
   },
   "dependencies": {
     "@aspida/axios": "^0.11.2",
+    "@types/ip": "^1.1.0",
     "@types/jest": "^26.0.10",
     "@types/js-yaml": "^3.12.5",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/papaparse": "^5.0.3",
     "@types/pino": "^6.3.0",
+    "@types/socket.io-client": "^1.4.34",
     "@types/socket.io-emitter": "^3.1.0",
     "@types/spdy": "^3.4.4",
     "aws-sdk": "^2.740.0",
@@ -40,7 +41,7 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "emoji-mart-vue-fast": "^7.0.4",
+    "dtrace-provider": "^0.8.8",
     "express": "^4.17.1",
     "fastify": "^3.0.3",
     "fastify-cookie": "^4.0.2",
@@ -50,6 +51,7 @@
     "firebase-admin": "^8.12.1",
     "firebaseui": "^4.5.0",
     "ioredis": "^4.16.3",
+    "ip": "^1.1.5",
     "js-yaml": "^3.14.0",
     "jsbn": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -68,13 +70,13 @@
     "socket.io-emitter": "^3.1.1",
     "socket.io-redis": "^5.2.0",
     "spdy": "^4.0.2",
-    "sticky-session": "^1.1.2",
     "vue": "3.0.0",
     "ws": "^7.3.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@types/bunyan": "^1.8.6",
+    "@types/cookie": "^0.4.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/ioredis": "^4.16.0",
@@ -105,7 +107,8 @@
     "ts-jest": "^26.1.3",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "yaml-cli": "^1.1.8"
   },
   "husky": {
     "hooks": {}
