--- a/server/virtual-poster.v1.yaml
+++ b/server/virtual-poster.v1.yaml
@@ -2626,6 +2626,34 @@ paths:
                   $ref: "#/components/schemas/Notification"
       operationId: get-maps-roomId-notifications
       description: Get notifications to user from server
+  "/maps/{roomId}/reset_cache":
+    parameters:
+      - $ref: "#/components/parameters/debug_token"
+      - $ref: "#/components/parameters/debug_as"
+      - schema:
+          type: string
+        name: roomId
+        in: path
+        required: true
+    post:
+      summary: Reset map cache on Redis
+      tags:
+        - map
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  ok:
+                    type: boolean
+                  error:
+                    type: string
+                required:
+                  - ok
+      operationId: post-maps-roomId-reset_cache
 components:
   parameters:
     debug_token:
@@ -2718,6 +2746,9 @@ components:
           type: integer
         custom_image:
           type: string
+        link_url:
+          type: string
+          format: uri
       required:
         - id
         - x
