English UI. Direct upload to S3. Keyboard menu for info. User groups. Map layout dynamic replace. Poster watermark. Customizable map cell size. Optionally hide unexplored area.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "noImplicitAny": false,
     "resolveJsonModule": true,
     "types": ["webpack-env", "node", "jest"],
