--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/socket.io-emitter": "^3.1.0",
     "@types/spdy": "^3.4.4",
     "aws-sdk": "^2.740.0",
-    "axios": "^0.19.2",
+    "axios": ">=0.21.1",
     "bip39": "^3.0.2",
     "blind-signatures": "^1.0.7",
     "bulma": "^0.9.1",
@@ -64,7 +64,6 @@
     "pino": "^6.5.1",
     "pino-pretty": "^4.0.3",
     "shortid": "^2.2.15",
-    "skyway-js": "^3.0.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "socket.io-emitter": "^3.1.1",
@@ -101,7 +100,7 @@
     "husky": "^4.2.5",
     "jest": "^26.4.2",
     "nodemon": "^2.0.3",
-    "openapi2aspida": "^0.11.0",
+    "openapi2aspida": "^0.12.0",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1",
     "ts-jest": "^26.1.3",
