--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "pg-promise": "^10.5.6",
     "pino": "^6.5.1",
     "pino-pretty": "^4.0.3",
+    "polybooljs": "^1.2.0",
     "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
